--- a/Interdisciplinary/Interdisciplinary/Views/Food/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Food/Index.cshtml
@@ -52,7 +52,7 @@
                         @Html.DisplayFor(modelItem => item.Picture)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Price) $
+                        @Html.DisplayFor(modelItem => item.Price) DKK
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Location)
