--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
@@ -268,6 +268,8 @@ body {
     box-sizing: border-box;
     margin: 0 auto;
 
+
+
     .form {
         margin-top: 30px;
         display: flex;
@@ -278,15 +280,15 @@ body {
             width: 50%;
             padding: 40px;
             box-sizing: border-box;
+
             h2 {
                 display: block;
                 margin: 0 auto 20px;
-
             }
+
             hr {
                 margin: 0 auto 20px;
-                opacity:.5;
-
+                opacity: .5;
             }
         }
 
@@ -304,16 +306,17 @@ body {
                 display: flex;
                 justify-content: space-between;
                 margin: 0 auto;
+
                 &.price {
                     &::after {
                         content: 'DKK';
                         display: block;
                         position: absolute;
-                        right:10px;
+                        right: 10px;
                         top: 15px;
-
                     }
                 }
+
                 input, select {
                     padding: 8px;
                     outline: 0;
@@ -322,9 +325,11 @@ body {
                 }
 
                 .text-danger {
-                    display: none;
+                    display: block;
                 }
+        
 
+                    
                 .btn {
                     @include btn;
                     width: 100%;
@@ -332,4 +337,8 @@ body {
             }
         }
     }
+}
+
+.form-wrapper .form form .form-group .text-danger {
+    display: block;
 }
