--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
@@ -289,6 +289,7 @@ body {
             text-transform: uppercase;
             font-size: 55px;
             font-weight: 900;
+            margin-bottom: 20px;
         }
 
         .cat-controller {
